// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> matches snapshot 1`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Ashton.org/"
>
  <div
    key="2d9e9bcc-f46a-4516-8896-4ffea6ae8c41"
  >
    autem et modi tenetur amet modi reprehenderit
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 2`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Bradley.io/"
  target="_blank"
>
  libero odit aut labore qui aut inventore
  <span
    key="bbc36e8a-3928-4077-baa2-9c927928a031"
  >
    molestiae cupiditate autem consequatur consequatur accusantium molestiae
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 3`] = `
<LinkComponent
  className="sc-AxjAm kGmApj autem eligendi nihil quis eveniet sit voluptas"
  href="http://www.Botsford.biz/"
  target="_self"
>
  <span
    key="d82ec38a-3d7c-4be5-9157-537ce2045691"
  >
    accusantium vel enim sint voluptatem porro ut
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 4`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Jaron.name/"
  target="_blank"
>
  <span
    key="c664e88b-186b-4bcd-83b1-37fd3a9e071a"
  >
    reiciendis perspiciatis ut illo sit rerum accusamus
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 5`] = `
<LinkComponent
  className="sc-AxjAm kGmApj et debitis dolorem possimus accusantium enim est"
  href="http://www.Morissette.name/"
  target="_blank"
>
  <div
    key="9bfe3d66-49bc-4a9a-ac27-7289385c16b5"
  >
    delectus aliquid et dicta ipsam qui provident
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 6`] = `
<LinkComponent
  className="sc-AxjAm kGmApj possimus voluptas eaque expedita iste velit et"
  href="http://www.Upton.tv/"
>
  <div
    key="9babf7d5-46ce-4172-9608-15c773cff13b"
  >
    quia blanditiis qui sed a dolores voluptatem
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 7`] = `
<LinkComponent
  className="sc-AxjAm kGmApj rerum aliquid reiciendis dolorem porro voluptates ut"
  href="http://www.Maude.name/"
  target="_blank"
>
  laborum officia iure eius veritatis voluptates suscipit
</LinkComponent>
`;

exports[`<Link> matches snapshot 8`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://McDermott.biz/"
>
  repellendus qui est quis est veniam eum
</LinkComponent>
`;

exports[`<Link> matches snapshot 9`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Rogahn.me/"
>
  quae tempora voluptatem autem voluptas delectus iure
  <span
    key="d2cf7659-9509-49f6-91c5-6ad21716b1e7"
  >
    sunt aut quam provident voluptates perspiciatis nulla
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 10`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Schmidt.ca/"
>
  <span
    key="02a5cf86-6b5f-46b9-b878-a030f75c79bf"
  >
    maiores iure fuga sit quod officiis exercitationem
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 11`] = `
<LinkComponent
  className="sc-AxjAm kGmApj est eos vero odio rerum voluptas veniam"
  href="http://www.Susana.ca/"
  target="_blank"
>
  <div
    key="9c3310cb-a8b9-4dc1-8440-4a1f95289a49"
  >
    voluptas accusamus quidem dolorum quis esse aut
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 12`] = `
<LinkComponent
  className="sc-AxjAm kGmApj quaerat laborum fugit est voluptatem et perferendis"
  href="http://www.Breitenberg.io/"
>
  <span
    key="2f4725b4-7c89-486c-ae42-9b598b512dfa"
  >
    veritatis pariatur magni ut explicabo iste quia
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 13`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Goyette.com/"
  target="_blank"
>
  eos perspiciatis autem quae repellat facilis praesentium
</LinkComponent>
`;

exports[`<Link> matches snapshot 14`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Lilian.net/"
  target="_blank"
>
  debitis eos rerum doloribus voluptas aliquid optio
  <div
    key="ac121ca1-07b3-42a1-b59e-f5a03fdd60d3"
  >
    aut deleniti quas ut ullam natus magnam
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 15`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Kuhn.us/"
  target="_blank"
>
  vero mollitia tempore delectus eos sunt optio
</LinkComponent>
`;

exports[`<Link> matches snapshot 16`] = `
<LinkComponent
  className="sc-AxjAm kGmApj et eos error aperiam delectus veritatis voluptatum"
  href="http://www.Bartoletti.org/"
  target="_blank"
>
  et amet suscipit sed est corporis est
</LinkComponent>
`;

exports[`<Link> matches snapshot 17`] = `
<LinkComponent
  className="sc-AxjAm kGmApj blanditiis sed omnis qui delectus porro ut"
  href="http://www.Jesus.us/"
  target="_self"
>
  sed iste iure dolor reiciendis debitis quisquam
  <span
    key="166af4cf-a06b-4520-92ef-bd708ea25854"
  >
    aliquam fuga consequatur est omnis officia nemo
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 18`] = `
<LinkComponent
  className="sc-AxjAm kGmApj quas ratione et non labore et dolores"
  href="http://Lorine.me/"
>
  <div
    key="01f3ff47-c22b-49f9-a275-d9d525ab3729"
  >
    et possimus recusandae optio saepe eligendi cupiditate
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 19`] = `
<LinkComponent
  className="sc-AxjAm kGmApj totam omnis fugiat illum id nostrum temporibus"
  href="http://Torp.us/"
>
  <span
    key="5e3a0f25-2c39-4aba-aac4-a19aa9993646"
  >
    amet illum qui eum qui ut sequi
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 20`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Kutch.net/"
  target="_blank"
>
  quaerat amet possimus vitae vel ut non
  <div
    key="f921c8ed-6c41-4d54-8b43-644f1bec3594"
  >
    ut similique dolorum aperiam ratione adipisci nemo
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 21`] = `
<LinkComponent
  className="sc-AxjAm kGmApj non debitis aperiam architecto quos et quia"
  href="http://Windler.biz/"
>
  maxime et cum aliquid atque aut sit
</LinkComponent>
`;

exports[`<Link> matches snapshot 22`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Runolfsdottir.info/"
  target="_self"
>
  adipisci voluptatum molestiae qui provident optio suscipit
  <span
    key="a96f9f37-d04f-4eac-94c2-ac4e31912c09"
  >
    eius sed non dolores non odio totam
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 23`] = `
<LinkComponent
  className="sc-AxjAm kGmApj est assumenda esse maxime aut magnam voluptatem"
  href="http://www.Carroll.org/"
>
  <span
    key="2b20e4cf-2ab2-4647-984f-cd7f2b5dbf9d"
  >
    rerum debitis ratione voluptatem eum et numquam
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 24`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Mueller.com/"
>
  <div
    key="ce79efb8-df4b-47c6-9694-3507d384ee7d"
  >
    aut nam eos ab sit non aut
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 25`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Destinee.info/"
>
  <span
    key="817e3b4f-1b78-4e49-89c7-2842a3d2b3fe"
  >
    ut nemo reprehenderit nemo impedit et itaque
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 26`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Lemke.biz/"
  target="_self"
>
  autem est et soluta aperiam nostrum voluptatem
</LinkComponent>
`;

exports[`<Link> matches snapshot 27`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Ziemann.biz/"
>
  tempore quo ad libero odit molestias ipsa
</LinkComponent>
`;

exports[`<Link> matches snapshot 28`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Jenkins.biz/"
  target="_blank"
>
  deleniti non et non aut consequatur provident
</LinkComponent>
`;

exports[`<Link> matches snapshot 29`] = `
<LinkComponent
  className="sc-AxjAm kGmApj tempore voluptas aut voluptatem non repudiandae porro"
  href="http://www.Schaden.us/"
>
  <div
    key="57d9d0ee-f488-46f4-a391-251800460c46"
  >
    harum cupiditate consequatur maxime velit dicta quia
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 30`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://Lourdes.io/"
  target="_blank"
>
  <div
    key="846267ed-44f5-4a78-b925-0512969f836e"
  >
    sint recusandae eos reiciendis maiores animi sint
  </div>
</LinkComponent>
`;

exports[`<Link> matches snapshot 31`] = `
<LinkComponent
  className="sc-AxjAm kGmApj"
  href="http://www.Katlyn.org/"
>
  <span
    key="38ac26b4-7ad4-49bf-a992-ecc94c17b4b5"
  >
    recusandae modi corporis rem animi quis atque
  </span>
</LinkComponent>
`;

exports[`<Link> matches snapshot 32`] = `
<LinkComponent
  className="sc-AxjAm kGmApj nisi laboriosam rerum voluptatum facilis voluptas suscipit"
  href="http://www.Marco.biz/"
  target="_self"
>
  provident voluptate ut sunt et necessitatibus eveniet
  <span
    key="8edad324-348f-411d-ba9a-31be47085c4e"
  >
    sit molestiae magni illo architecto facere minus
  </span>
</LinkComponent>
`;
